# my-xmonad-modules

./: .gitattributes  .gitignore  package.yaml  sgf-xmonad-modules.cabal  stack.yaml
extra-deps/: sgf-haskell-common
src/Sgf/Data/: List.hs
src/Sgf/XMonad/: Config.hs  Docks.hs  Focus.hs  Fullscreen.hs  Lock.hs  Pulse.hs  Restartable.hs  Trace.hs  VNC.hs  Workspaces.hs  X11.hs
src/Sgf/XMonad/Actions/: Submap.hs
src/Sgf/XMonad/Docks/: Trayer.hs  Xmobar.hs
src/Sgf/XMonad/Hooks/: EwmhDesktops.hs  Focus.hs  ManageHelpers.hs  SetWMName.hs
src/Sgf/XMonad/Layout/: ShadowedWorkspaces.hs
src/Sgf/XMonad/Restartable/: Feh.hs  Firefox.hs  Shell.hs  XTerm.hs
src/Sgf/XMonad/Util/: EZConfig.hs  EntryHelper.hs  Run.hs
