name:                sgf-xmonad-modules
version:             0.4.1.1
synopsis:            sgf's xmonad modules
description:         sgf's xmonad modules
homepage:            https://github.com/sgf-dma/my-xmonad-modules
license:             BSD3
license-file:        LICENSE
author:              sgf
maintainer:          sgf.dma@gmail.com
copyright:           2016 Author Here
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sgf.XMonad.Docks
                       Sgf.XMonad.Docks.Xmobar
                       Sgf.XMonad.Docks.Trayer
                       Sgf.XMonad.Restartable
                       Sgf.XMonad.Restartable.Firefox
                       Sgf.XMonad.Restartable.Shell
                       Sgf.XMonad.Restartable.Feh
                       Sgf.XMonad.Restartable.XTerm
                       Sgf.XMonad.VNC
                       Sgf.XMonad.Trace
                       Sgf.XMonad.Focus
                       Sgf.XMonad.Util.Run
                       Sgf.XMonad.Util.EntryHelper
                       Sgf.XMonad.Util.EZConfig
                       Sgf.XMonad.Workspaces
                       Sgf.Control.Lens
  other-modules:       Sgf.Data.List
                       Sgf.Control.Exception
  build-depends:       base >= 4.7 && < 5
                     , mtl >= 2.1 && < 3
                     , transformers >= 0.3 && < 1
                     , filepath >= 1.3 && < 2
                     , directory >= 1.1 && < 2
                     , unix >= 2.5 && < 3
                     , containers >= 0.5 && < 1
                     , process >= 1.1 && < 2
                     , utf8-string >= 0.3 && < 2
                     , xmonad >= 0.10 && < 1
                     , xmonad-contrib >= 0.10 && < 1
                     , xmonad-entryhelper == 0.1.*
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

--test-suite xmonad-modules-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , xmonad-modules
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgf-dma/my-xmonad-modules
