name:                sgf-xmonad-modules
version:             1.2.0
synopsis:            sgf's xmonad modules
description:         sgf's xmonad modules
homepage:            https://github.com/sgf-dma/sgf-xmonad-modules
license:             BSD3
license-file:        LICENSE
author:              sgf
maintainer:          sgf.dma@gmail.com
copyright:           2016 Author Here
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sgf.XMonad.Docks
                       Sgf.XMonad.Docks.Xmobar
                       Sgf.XMonad.Docks.Trayer
                       Sgf.XMonad.Restartable
                       Sgf.XMonad.Restartable.Firefox
                       Sgf.XMonad.Restartable.Shell
                       Sgf.XMonad.Restartable.Feh
                       Sgf.XMonad.Restartable.XTerm
                       Sgf.XMonad.VNC
                       Sgf.XMonad.Trace
                       Sgf.XMonad.Hooks.Focus
                       Sgf.XMonad.Util.Run
                       Sgf.XMonad.Util.EntryHelper
                       Sgf.XMonad.Util.EZConfig
                       Sgf.XMonad.Workspaces
                       Sgf.XMonad.Config
                       Sgf.XMonad.Fullscreen
                       Sgf.XMonad.Lock
                       Sgf.XMonad.Pulse
                       Sgf.XMonad.Hooks.ManageHelpers
                       Sgf.XMonad.Hooks.SetWMName
                       Sgf.XMonad.X11
  build-depends:       base
                     , mtl
                     , transformers
                     , tagged
                     , filepath
                     , directory
                     , unix
                     , containers
                     , process
                     , utf8-string
                     , X11
                     , xmonad
                     , xmonad-contrib
                     , xmonad-entryhelper
                     , sgf-haskell-common
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

--test-suite xmonad-modules-test
--  type:                exitcode-stdio-1.0
--  hs-source-dirs:      test
--  main-is:             Spec.hs
--  build-depends:       base
--                     , xmonad-modules
--  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
--  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sgf-dma/sgf-xmonad-modules
